--- a/templates/video.html
+++ b/templates/video.html
@@ -9,8 +9,8 @@
 
 <body>
 <video id="my-video" class="video-js" controls preload="auto" width="640" height="264"
-       poster="/uploads/pic.jpeg" data-setup="{}">
-    <source src="/uploads/upload2.mp4" type='video/mp4'>
+ data-setup="{}">
+    <source src="{{ src }}" type='video/mp4'>
     <p class="vjs-no-js">
         To view this video please enable JavaScript, and consider upgrading to a web browser that
         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
